--- a/codingrooms-project (8)/index.html
+++ b/codingrooms-project (8)/index.html
@@ -1,5 +1,5 @@
 <h1>Mad Libs</h1>
- 
+ <html>
 <form id="myFrom">
   <label for="noun">Noun</label><br>
   <input type="text" id="noun" name="noun"><br><br>
@@ -45,3 +45,4 @@
         
     });
 </script>
+</html>
